<resources>
    <string name="app_name">My Looks</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_email_exist">Email not registered in database</string>
    <string name="error_password_incorrect">Incorrect password</string>
    <string name="error_invalid_date">Invalid date format: dd/mm/yyyy</string>
    <string name="error_email_duplicate">This email address is already registered</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_gender">Gender must be selected</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="str_login">Log In</string>
    <string name="str_password">password</string>
    <string name="title_activity_sign_log">SignLogActivity</string>
    <string name="birth_Date_str">Birth Date: dd/mm/yyyy</string>
    <string name="str_continue">Continue</string>
    <string name="str_favorite_outfits">Favorite Outfits</string>
    <string name="outfit_name">Outfit Name</string>
    <string name="str_name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="color">Select the items color</string>
    <string name="Developers">Ivan Rangel Varela\nGuillermo Pérez Trueba\nJosé Antonio Malo de la Peña\nRubén Escalante Chan\n </string>
    <string name="ContactMail">mylooksapp@outlook.com</string>
    <string name="ChangeColor">Change Favorite Color</string>
    <string name="LogOut">Log Out</string>
    <string name="About">About</string>
</resources>
