<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Preferences">
            <menu>
                <item
                    android:id="@+id/nav_color"
                    android:icon="@drawable/ic_config"
                    android:title="@string/ChangeColor" />
                <!--<item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_child"
                    android:title="Slideshow" />
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_share"
                    android:title="Tools" />-->
            </menu>
        </item>
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_Info"
                android:icon="@drawable/ic_info"
                android:title="@string/About"
                app:showAsAction="always" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/LogOut"
                app:showAsAction="always" />
        </menu>

    </item>
</menu>